fixed nav padding issue, and padding on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,7 @@
 body {
   height: 100%;
   overflow: auto;
+  margin: 0;
   color: #666666;
   /* background-color: #121212; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
